--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,23 @@
-<div style='color:red'>
-  <% flash.each do |key, value| %>
-    <%= content_tag :div, value, class: "flash #{key}" %>
+<div class="container">
+  <div style="color:red">
+    <%= content_tag :div, flash[:error] %>
+  </div>
+
+  <%= form_tag(controller: "home", action: "get_tweets") do %>
+    <p>
+      <%= label_tag "Handle:" %><br>
+      <%= text_field_tag :handle %>
+    </p>
+    <p>
+      <%= submit_tag "Get Tweets"%>
+    </p>
   <% end %>
+
+  <ul>
+  <% @tweets.each do |tweet| %>
+    <li>
+      <%= tweet.text %>
+    </li>
+  <% end %>
+  </ul>
 </div>
-
-<%= form_tag(controller: 'home', action: 'get_tweets') do %>
-  <p>
-    <%= label_tag "Handle:" %><br>
-    <%= text_field_tag :handle %>
-  </p>
-  <p>
-    <%= submit_tag "Get Tweets"%>
-  </p>
-<% end %>
-
-<ul>
-<% @tweets.each do |tweet| %>
-  <li>
-    <%= tweet.text %>
-  </li>
-<% end %>
-</ul>
