--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
   <%= form_tag(controller: "home", action: "get_tweets") do %>
     <p>
       <%= label_tag "Handle:" %><br>
-      <%= text_field_tag :handle %>
+      <%= text_field_tag :handle, nil, required: true%>
     </p>
       <%= submit_tag "Get Tweets"%>
     </p>
