--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,17 +6,23 @@
   <%= form_tag(controller: "home", action: "get_tweets") do %>
     <p>
       <%= label_tag "Handle:" %><br>
-      <%= text_field_tag :handle %>
+      <%= text_field_tag :handle, nil, required: true %>
     </p>
       <%= submit_tag "Get Tweets"%>
     </p>
   <% end %>
 
-  <ul class="list-group">
-  <% @tweets.each do |tweet| %>
-    <li class="list-group-item">
-      <%= tweet.text %>
-    </li>
-  <% end %>
-  </ul>
+  <div>
+    <% if @tweets %>
+      <%= @tweets.first.user.screen_name %>
+      <img src="<%= @tweets.first.user.profile_image_url %>" />
+    <% end %>
+    <ul class="list-group">
+    <% @tweets.each do |tweet| %>
+      <li class="list-group-item">
+        <%= tweet.text %>
+      </li>
+    <% end %>
+    </ul>
+  </div>
 </div>
