--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,28 +1,36 @@
-<div class="container">
-  <div style="color:red">
-    <%= content_tag :div, flash[:error] %>
-  </div>
+<div class="jumbotron">
+  <div class="container">
+    <div style="color:red">
+      <%= content_tag :div, flash[:error] %>
+    </div>
 
-  <%= form_tag(controller: "home", action: "get_tweets") do %>
-    <p>
-      <%= label_tag "Handle:" %><br>
-      <%= text_field_tag :handle, nil, required: true %>
-    </p>
-      <%= submit_tag "Get Tweets"%>
-    </p>
-  <% end %>
+    <%= form_tag(controller: "home", action: "get_tweets") do %>
+      <p>
+        <%= label_tag "Handle:" %><br>
+        <%= text_field_tag :handle, nil, required: true %>
+      </p>
+        <%= submit_tag "Get Tweets"%>
+      </p>
+    <% end %>
 
-  <div>
-    <% if @tweets %>
-      <%= @tweets.first.user.screen_name %>
-      <img src="<%= @tweets.first.user.profile_image_url %>" />
-    <% end %>
-    <ul class="list-group">
-    <% @tweets.each do |tweet| %>
-      <li class="list-group-item">
-        <%= tweet.text %>
-      </li>
-    <% end %>
-    </ul>
+    <div>
+      <% if @tweets.count > 0 %>
+        <img class="pretty-border" src="<%= @tweets.first.user.profile_image_url %>" />
+        <h2 style="display:inline"> <%= @tweets.first.user.screen_name %> </h2>
+      <% end %>
+      <ul class="list-group">
+      <% @tweets.each do |tweet| %>
+        <li class="list-group-item">
+          <span class="badge has-tooltip" data-container="body" data-toggle="tooltip" title="Retweets">
+            <%= tweet.retweet_count %>
+          </span>
+          <span class="badge has-tooltip" data-container="body" data-toggle="tooltip" title="Favorites">
+            <%= tweet.favorite_count %>
+          </span>
+          <%= tweet.text %>
+        </li>
+      <% end %>
+      </ul>
+    </div>
   </div>
 </div>
