--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,6 +18,8 @@
         <% if @tweets.count > 0 %>
           <img class="pretty-border" src="<%= @tweets.first.user.profile_image_url %>" />
           <h2 style="display:inline"> <%= @tweets.first.user.screen_name %> </h2>
+        <% else %>
+          <h2> Enter twitter handle above! </h2>
         <% end %>
       </div>
       <ul class="list-group">
